# gong-to-notion

./: .env.example  .gitignore  README.md  fill_agency_account_ids.py  fill_staff_agency_by_domain.py  pyproject.toml  seed_agency_domains_from_calls.py
.claude/skills/customer-interactions-judgment-fill/: SKILL.md
src/gong_to_notion/: __init__.py  __main__.py  agency_and_staff_fill.py  gong_client.py  mapping.py  notion_client.py  report.py
